# LifeGame

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml  release.yml
v1/: lifegame_ver0.0.1.cpp  lifegame_ver0.0.2.cpp  lifegame_ver0.0.3.cpp  lifegame_ver0.1.0.cpp
